--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==22.2.0
-chardet==4.0.0
-discord==1.7.3
-discord.py==1.7.3
+aiohttp==3.8.5
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+charset-normalizer==3.2.0
+discord==2.3.1
+discord.py==2.3.1
+frozenlist==1.4.0
 idna==3.4
-idna-ssl==1.1.0
-multidict==5.2.0
-typing_extensions==4.1.1
-yarl==1.7.2
+multidict==6.0.4
+python-dotenv
+yarl==1.9.2
