--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 discord = "^2.3.1"
+Flask = "^2.3.2"
 
 [tool.poetry.dev-dependencies]
 
