--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
-﻿DISCORD_BOT_TOKEN=
+﻿# Discord
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_GUILD_ID=
+
+DISCORD_BOT_TOKEN=
+
+APP_URL=http://devassist.local
+API_TOKEN=
+GROQ_API_KEY=
+GROQ_API_BASE_URL=https://api.groq.com/openai/v1
