--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "axios": "^1.6.2",
         "body-parser": "^1.19.0",
+        "colors": "^1.4.0",
         "discord.js": "^14.15.3",
         "dotenv": "^16.3.1",
         "express": "^4.17.1",
